--- a/Apps/Cores/Views/User/editDep.phtml
+++ b/Apps/Cores/Views/User/editDep.phtml
@@ -41,19 +41,14 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <div class='pull-left'>
-                        <label class="check">
-                            <input type="checkbox" />
-                            <before></before>
-                            <after></after>&nbsp;
-                            Ghi và thêm mới
-                        </label>
-                    </div>
-                    <div class='pull-right'>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy bỏ</button>
-                        <button type="submit" class="btn btn-primary">Ghi lại</button>
-                    </div>
-                    <div class='clearfix'></div>
+                    <label class="check">
+                        <input type="checkbox" />
+                        <before></before>
+                        <after></after>
+                        &nbsp;Ghi & thêm mới&nbsp;
+                    </label>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy bỏ</button>
+                    <button type="submit" class="btn btn-primary">Ghi lại</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
