--- a/Apps/Cores/Views/User/user.phtml
+++ b/Apps/Cores/Views/User/user.phtml
@@ -96,7 +96,7 @@ $this->setTitle('Tài khoản')
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Thêm tài khoản</a></li>
+                            <li><a href="javascript:;" ng-click="editUser()">Thêm tài khoản</a></li>
                             <li><a href="javascript:;" ng-click="editDep()">Thêm đơn vị</a></li>
                         </ul>
                     </div>
