--- a/Apps/Cores/Views/User/editUser.phtml
+++ b/Apps/Cores/Views/User/editUser.phtml
@@ -3,15 +3,17 @@
     #user-group legend{margin-bottom: 0;}
     #user-permission td,
     #user-group td{padding-left: 20px;}
+    #modal-user .modal-body{padding: 0;}
+    #modal-user .tab-content{padding: 15px;}
 </style>
 
-<form method="post" ng-submit="submitUser()" class="form-horizontal">
+<form method="post" ng-submit="submitUser($event)" class="form-horizontal form-validate">
     <div id="modal-user" class="modal fade" tabindex="-1" role="dialog" ng-dom="modalUser">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Người dùng</h4>
+                    <h4 class="modal-title">Người dùng: {{editingUser.fullName}}</h4>
                 </div>
                 <div class="modal-body">
                     <!-- Nav tabs -->
@@ -19,198 +21,24 @@
                                 $(window).trigger('resize');
                             }, 500)">
                         <li role="presentation" class="active">
-                            <a href="#user-general" aria-controls="user-general" role="tab" data-toggle="tab"><i class="fa fa-user"></i> Thông tin cơ bản</a>
+                            <a href="#user-general" aria-controls="user-general" role="tab" data-toggle="tab">Thông tin cơ bản</a>
                         </li>
                         <li role="presentation">
-                            <a href="#user-group" aria-controls="user-group" role="tab" data-toggle="tab"><i class="fa fa-folder"></i> Nhóm</a>
+                            <a href="#user-group" aria-controls="user-group" role="tab" data-toggle="tab">Nhóm</a>
                         </li>
                         <li role="presentation">
-                            <a href="#user-permission" aria-controls="user-permission" role="tab" data-toggle="tab"><i class="fa fa-legal"></i> Phân quyền</a>
+                            <a href="#user-permission" aria-controls="user-permission" role="tab" data-toggle="tab">Phân quyền</a>
                         </li>
                     </ul>
                     <div class="tab-content">
-                        <h4></h4>
                         <div id="user-general" role="tabpanel" class="tab-pane fade in active">
-                            <fieldset>
-                                <legend>Tài khoản</legend>
-                                <div class="form-group">
-                                    <label class="control-label col-xs-3" for="user-account">Đăng nhập:</label>
-                                    <div class="col-xs-9">
-                                        <div style="display: flex">
-                                            <div style="flex: 1;">
-                                                <input type="text" id="user-account" class="form-control" ng-model="editingUser.account"/>
-                                            </div>
-                                            <div>
-                                                &nbsp;
-                                                <label class="check">
-                                                    <input type="checkbox" />
-                                                    <before></before>
-                                                    <after></after>&nbsp;
-                                                    Hoạt động
-                                                </label>
-                                            </div>
-                                        </div>
-                                        <div ng-if="!editingUser.changePass">
-                                            <h4></h4>
-                                            <a href="javascript:;" ng-click="togglePassword()">Đổi mật khẩu</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div ng-if="editingUser.changePass">
-                                    <div class="form-group">
-                                        <label class="control-label col-xs-3" for="user-new-pass">Mật khẩu mới:</label>
-                                        <div class="col-xs-9">
-                                            <input type="text" id="user-new-pass" class="form-control" ng-model="editingUser.newPass"/>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-xs-3" for="user-re-pass">Nhập lại mật khẩu:</label>
-                                        <div class="col-xs-9">
-                                            <input type="text" id="user-re-pass" class="form-control" ng-model="editingUser.rePass"/>
-                                            <h4></h4>
-                                            <a href="javascript:;" ng-click="togglePassword()">Hủy đổi mật khẩu</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </fieldset>
-                            <fieldset>
-                                <legend>Thông tin hành chính</legend>
-
-                                <div class="form-group">
-                                    <label class="control-label col-xs-3" for="user-dep">Thuộc đơn vị:</label>
-                                    <div class="col-xs-9">
-                                        <div class="parent-dep">
-                                            <input type="text" class="form-control" id="user-dep" readonly placeholder="Chọn đơn vị"
-                                                   value="{{editingUser.parentDep.depName}}" ng-click="pickUserDep()"/>
-                                            <span ng-if="editingUser.parentDep && editingUser.parentDep.pk" ng-click="clearUserDep()">&times;</span>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="control-label col-xs-3" for="user-name">Họ và tên:</label>
-                                    <div class="col-xs-9">
-                                        <input type="text" id="user-name" class="form-control" ng-model="editingUser.fullName"/>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="control-label col-xs-3" for="user-job">Chức vụ:</label>
-                                    <div class="col-xs-9">
-                                        <input type="text" id="user-job" class="form-control" ng-model="editingUser.jobTitle"/>
-                                    </div>
-                                </div>
-                            </fieldset>
-
+                            <?php require __DIR__ . '/editUser/userGeneral.php' ?>
                         </div><!--tab-->
                         <div id="user-group" role="tabpanel" class="tab-pane fade">
-                            <fieldset>
-                                <legend>Chọn nhóm</legend>
-                            </fieldset>
-                            <table class='table-bordered table table-striped table-hover'>
-                                <tr>
-                                    <td>
-                                        <label class="check">
-                                            <input type="checkbox" />
-                                            <before></before>
-                                            <after></after>&nbsp;
-                                            Nhóm 1
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="check">
-                                            <input type="checkbox" />
-                                            <before></before>
-                                            <after></after>&nbsp;
-                                            Nhóm 1
-                                        </label>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <label class="check">
-                                            <input type="checkbox" />
-                                            <before></before>
-                                            <after></after>&nbsp;
-                                            Nhóm 1
-                                        </label>
-                                    </td>
-                                </tr>
-                            </table>
+                            <?php require __DIR__ . '/editUser/userGroup.php' ?>
                         </div>
                         <div id="user-permission" role="tabpanel" class="tab-pane fade">
-                            <fieldset>
-                                <legend>Hệ thống</legend>
-
-                                <table class='table-bordered table table-striped table-hover'>
-                                    <tr>
-                                        <td>
-                                            <label class="check">
-                                                <input type="checkbox" />
-                                                <before></before>
-                                                <after></after>&nbsp;
-                                                Nhóm 1
-                                            </label>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <label class="check">
-                                                <input type="checkbox" />
-                                                <before></before>
-                                                <after></after>&nbsp;
-                                                Nhóm 1
-                                            </label>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <label class="check">
-                                                <input type="checkbox" />
-                                                <before></before>
-                                                <after></after>&nbsp;
-                                                Nhóm 1
-                                            </label>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </fieldset>
-                            <fieldset>
-                                <legend>Tin bài</legend>
-
-                                <table class='table-bordered table table-striped table-hover'>
-                                    <tr>
-                                        <td>
-                                            <label class="check">
-                                                <input type="checkbox" />
-                                                <before></before>
-                                                <after></after>&nbsp;
-                                                Nhóm 1
-                                            </label>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <label class="check">
-                                                <input type="checkbox" />
-                                                <before></before>
-                                                <after></after>&nbsp;
-                                                Nhóm 1
-                                            </label>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <label class="check">
-                                                <input type="checkbox" />
-                                                <before></before>
-                                                <after></after>&nbsp;
-                                                Nhóm 1
-                                            </label>
-                                        </td>
-                                    </tr>
-                                </table>
-                            </fieldset>
+                            <?php require __DIR__ . '/editUser/userPermission.php' ?>
                         </div>
                     </div>
                 </div>
@@ -222,7 +50,7 @@
                         Ghi & thêm mới&nbsp;
                     </label>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Hủy bỏ</button>
-                    <button type="submit" class="btn btn-primary">Ghi lại</button>
+                    <button type="submit" class="btn btn-primary" ng-disabled="ajax.checkUniqueAccount">Ghi lại</button>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
