--- a/Apps/Cores/Views/User/user.phtml
+++ b/Apps/Cores/Views/User/user.phtml
@@ -49,7 +49,7 @@ $this->setTitle('Tài khoản')
         </li>
         <li class="active">{{department.depName}}</li>
     </ol>
-
+    {{filters}}<hr>{{filter}}
     <form class="panel panel-info panel-filter" ng-class="<?php echo "{'minimize': !showFilter}" ?>">
         <div class="panel-heading">
             <button type="submit" class="btn btn-default" formmethod="post" name="filter" value="0">
@@ -65,14 +65,14 @@ $this->setTitle('Tài khoản')
             <div class="row">
                 <div  class="col-md-6">
                     <label for="filter-name">Tìm kiếm</label>
-                    <input type="text" class="form-control"  id="filter-name" name="search" placeholder="tên, điện thoại, chức danh, tài khoản"/>
+                    <input type="text" class="form-control"  id="filter-name" name="search" placeholder="đơn vị, người dùng" ng-model="filter.search"/>
                 </div>
                 <div class="col-md-3">
                     <label for="filter-status">Trạng thái</label>
-                    <select class="form-control" id="filter-status" name="status">
-                        <option value="0">Tất cả</option>
-                        <option value="active">Hoạt động</option>
-                        <option value="inactive">Không hoạt động</option>
+                    <select class="form-control" id="filter-status" name="status" ng-model="filter.status">
+                        <option value="-1">Tất cả</option>
+                        <option value="1">Hoạt động</option>
+                        <option value="0">Không hoạt động</option>
                     </select>
                 </div>
             </div>
@@ -100,8 +100,8 @@ $this->setTitle('Tài khoản')
                             <li><a href="javascript:;" ng-click="editDep()">Thêm đơn vị</a></li>
                         </ul>
                     </div>
-                    <button type="button" class="btn btn-default" ng-disabled="!anythingChecked()"><i class="fa fa-exchange"></i> Chuyển đơn vị</button>
-                    <button type="button" class="btn btn-default" ng-disabled="!anythingChecked()"><i class="fa fa-trash"></i> Xóa</button>
+                    <button type="button" class="btn btn-default" ng-disabled="!anythingChecked()" ng-click="move()"><i class="fa fa-exchange"></i> Chuyển tới</button>
+                    <button type="button" class="btn btn-default" ng-disabled="!anythingChecked()" ng-click="delete()"><i class="fa fa-trash"></i> Xóa</button>
                 </td>
             </tr>
             <tr>
@@ -121,8 +121,11 @@ $this->setTitle('Tài khoản')
             <tr ng-if="department && !department.users.length && !department.deps.length">
                 <td colspan="4" class="center"><Br>Chưa có thư mục và tài khoản trong đơn vị.<br>&nbsp;</td>
             </tr>
+            <tr ng-if="searchResult && !searchResult.users.length && !searchResult.departments.length">
+                <td colspan="4" class="center"><Br>Không tìm thấy kết quả nào.<br>&nbsp;</td>
+            </tr>
 
-            <tr ng-repeat="childDep in department.deps" ng-class="<?php echo "{'stt-active': childDep.stt, 'stt-inactive': !childDep.stt}" ?>">
+            <tr ng-repeat="childDep in deps()" ng-class="<?php echo "{'stt-active': childDep.stt, 'stt-inactive': !childDep.stt}" ?>">
                 <td class="center ">
                     <div class="tbl-check">
                         <label class="check">
@@ -140,8 +143,7 @@ $this->setTitle('Tài khoản')
                         <a href="javascript:;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="javascript:;" ng-click="editDep(childDep)">Sửa</a></li>
-                            <li><a href="javascript:;">Chuyển đơn vị</a></li>
-                            <li><a href="javascript:;">Xóa</a></li>
+                            <li><a href="javascript:;" ng-click="deleteDep(childDep)">Xóa</a></li>
                         </ul>
                     </div>
                 </td>
@@ -150,11 +152,11 @@ $this->setTitle('Tài khoản')
                     Đơn vị/Phòng ban
                 </td>
             </tr>
-            <tr ng-repeat="user in department.users" class="stt-inactive">
+            <tr ng-repeat="user in users()" ng-class="<?php echo "{'stt-active': user.stt, 'stt-inactive': !user.stt}" ?>">
                 <td class="center">
                     <div class="tbl-check">
-                        <label class="check">
-                            <input type="checkbox" value="{{user.pk}}" ng-model="checkedUsers[user.pk]"/>
+                        <label class="check" >
+                            <input type="checkbox" value="{{user.pk}}" ng-model="checkedUsers[user.pk]" ng-disabled="user.isAdmin"/>
                             <before></before>
                             <after></after>
                         </label>
@@ -167,8 +169,9 @@ $this->setTitle('Tài khoản')
                     <div class="dropdown">
                         <a href="javascript:;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i></a>
                         <ul class="dropdown-menu">
-                            <li><a href="javascript:;">Sửa</a></li>
-                            <li><a href="javascript:;">Xóa</a></li>
+                            <li><a href="javascript:;" ng-click="editUser(user)">Sửa</a></li>
+                            <li><a href="javascript:;" ng-click="copyUser(user)">Sao chép</a></li>
+                            <li><a href="javascript:;" ng-if="!user.isAdmin" ng-click="deleteUser(user)">Xóa</a></li>
                         </ul>
                     </div>
                 </td>
@@ -226,3 +229,9 @@ $this->setTitle('Tài khoản')
     <!--department picker-->
     <div ng-department-picker></div>
 </angular>
+
+<script>
+    var PAGE_DATA = {
+        'action': <?php echo json_encode($action) ?>
+    };
+</script>
